# rtow

./: .clang-format  CMakeLists.txt  camera.hpp  color.hpp  intersection.hpp  intersection_record.hpp  intersection_table.hpp  intersection_table_collection.hpp  intersection_table_sphere.hpp  main.cpp  material.hpp  material_dielectric.hpp  material_lambertian.hpp  material_metal.hpp  math.hpp  random.hpp  ray.hpp  rtow.sublime-project  vcpkg-configuration.json  vcpkg.json  vec3.hpp
